Update index.html 5

--- a/index.html
+++ b/index.html
@@ -1,60 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>FinCore – Wealth Management Platform</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
-    <!-- NAVBAR -->
-    <header class="navbar">
-        <div class="logo">FinCore<span>.</span></div>
-        <nav>
-            <a href="#">Features</a>
-            <a href="#">Solutions</a>
-            <a href="#">Login</a>
-            <a href="#" class="btn-primary">Book a Demo</a>
+<!-- NAVBAR -->
+<header class="navbar">
+    <div class="container nav-inner">
+        <div class="logo">FinCore</div>
+        <nav class="nav-menu">
+            <a href="#platform">Platform</a>
+            <a href="#solutions">Solutions</a>
+            <a href="#about">About</a>
+            <a href="#contact" class="btn-primary">Request Demo</a>
         </nav>
-    </header>
+    </div>
+</header>
 
-    <!-- HERO SECTION -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Future-Proof Your<br>Wealth Management<br>Firm</h1>
-
+<!-- HERO -->
+<section class="hero">
+    <div class="container hero-grid">
+        <div class="hero-text">
+            <span class="eyebrow">Trusted by 200+ wealth firms</span>
+            <h1>Transform Your Firm’s <span>Digital Presence</span></h1>
             <p>
-                A modern operating system for advisors. Digitize onboarding,
-                portfolio reporting, and client engagement — all in one platform.
+                Empower your wealth management practice with modern digital tools.
+                Engage clients, grow AUM, and scale operations seamlessly.
             </p>
 
             <div class="hero-actions">
-                <a href="#" class="btn-primary">Start Free Trial</a>
-                <a href="#" class="btn-secondary">Watch Video ▶</a>
+                <a href="#" class="btn-primary">Schedule a Demo →</a>
+                <a href="#" class="btn-secondary">▶ Watch Overview</a>
             </div>
         </div>
 
-        <!-- DASHBOARD IMAGE -->
-        <div class="hero-image">
-            <img 
-                src="banner.png" 
-                alt="FinCore Dashboard"
-                loading="lazy"
-            >
+        <div class="hero-visual">
+            <img src="banner.png" alt="Dashboard Preview">
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- TRUST SECTION -->
-    <section class="trusted">
-        <p>TRUSTED BY 500+ INVESTMENT FIRMS</p>
-        <div class="logos">
-            <img src="logo_color.jpg" alt="Client logo">
-            <img src="logo_color.jpg" alt="Client logo">
-            <img src="logo_color.jpg" alt="Client logo">
-            <img src="logo_color.jpg" alt="Client logo">
+<!-- PLATFORM CAPABILITIES -->
+<section class="capabilities" id="platform">
+    <div class="container">
+        <div class="section-header">
+            <span class="eyebrow">Platform Capabilities</span>
+            <h2>Everything You Need to <span>Scale Digitally</span></h2>
+            <p>Enterprise-grade tools designed for modern wealth management firms.</p>
         </div>
-    </section>
 
+        <div class="cap-grid">
+            <div class="cap-card">
+                <h3>Digital Client Portal</h3>
+                <p>Secure branded portals with portfolio views, documents, and messaging.</p>
+            </div>
+            <div class="cap-card">
+                <h3>Client Acquisition Engine</h3>
+                <p>Automated lead capture, nurturing workflows, and conversions.</p>
+            </div>
+            <div class="cap-card">
+                <h3>Performance Analytics</h3>
+                <p>Advanced dashboards, benchmarking, and white-labeled reports.</p>
+            </div>
+            <div class="cap-card">
+                <h3>Compliance Ready</h3>
+                <p>Audit trails, encryption, regulatory disclosures, and controls.</p>
+            </div>
+            <div class="cap-card">
+                <h3>Workflow Automation</h3>
+                <p>Automate onboarding, reviews, communications, and operations.</p>
+            </div>
+            <div class="cap-card">
+                <h3>Mobile Experience</h3>
+                <p>Native apps for advisors and clients across all devices.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- PLATFORM OVERVIEW -->
+<section class="overview" id="solutions">
+    <div class="container overview-grid">
+        <div class="overview-text">
+            <span class="eyebrow">The FinCore Platform</span>
+            <h2>One Platform, <span>Unlimited Potential</span></h2>
+            <p>
+                From client acquisition to portfolio management, FinCore
+                brings everything together in one secure ecosystem.
+            </p>
+
+            <ul class="checklist">
+                <li>✔ White-labeled client portals</li>
+                <li>✔ Real-time portfolio analytics</li>
+                <li>✔ Secure document vault & e-signatures</li>
+                <li>✔ Integrated CRM & communications</li>
+                <li>✔ Automated compliance & audit trails</li>
+                <li>✔ Advisor & client mobile apps</li>
+            </ul>
+
+            <a href="#" class="btn-primary">Explore Platform →</a>
+        </div>
+
+        <div class="overview-visual">
+            <img src="banner.png" alt="Analytics Dashboard">
+        </div>
+    </div>
+</section>
+
+<!-- FINAL CTA -->
+<section class="cta" id="contact">
+    <div class="container">
+        <span class="eyebrow">Get Started Today</span>
+        <h2>Ready to Transform Your <span>Digital Strategy?</span></h2>
+        <p>
+            Join leading wealth management firms already scaling with FinCore.
+        </p>
+
+        <div class="cta-actions">
+            <a href="#" class="btn-primary">Schedule Demo</a>
+            <a href="#" class="btn-outline">Contact Sales</a>
+        </div>
+
+        <small>Free 30-minute consultation • No commitment • Enterprise-ready</small>
+    </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+    <div class="container footer-grid">
+        <div>
+            <h4>FinCore</h4>
+            <p>Empowering wealth management firms to scale digitally.</p>
+        </div>
+        <div>
+            <h4>Product</h4>
+            <a href="#">Platform</a>
+            <a href="#">Solutions</a>
+            <a href="#">Pricing</a>
+        </div>
+        <div>
+            <h4>Company</h4>
+            <a href="#">About</a>
+            <a href="#">Careers</a>
+            <a href="#">Contact</a>
+        </div>
+        <div>
+            <h4>Legal</h4>
+            <a href="#">Privacy</a>
+            <a href="#">Security</a>
+            <a href="#">Compliance</a>
+        </div>
+    </div>
+
+    <p class="copyright">© 2026 FinCore. All rights reserved.</p>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
